# tree-menu

./: .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml  requirements.txt
django_project/: settings.py  urls.py
example/: urls.py  views.py
example/templates/: index.html  menu.html
tree_menu/: admin.py  models.py
tree_menu/migrations/: 0001_initial.py  0002_remove_node_content_type_remove_node_object_id_and_more.py  0003_alter_node_parent_menu_alter_node_parent_node.py  0004_menu_display_name.py  0005_alter_node_url.py  0006_node_named_url_alter_node_url.py  0007_rename_parent_node_node_parent_and_more.py  0008_alter_node_named_url_alter_node_url.py  0009_menu_root_node.py
tree_menu/templatetags/: menu_tags.py
