[tool.poetry]
name = "django-02"
version = "0.1.0"
description = ""
authors = ["odhako <odhako@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"
django-extensions = "^3.2.1"
ipython = "^8.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
