[tool.poetry]
name = "tree-menu"
version = "0.1.0"
description = "Tree menu Django-app"
authors = ["odhako <odhako@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
